--- a/package.json
+++ b/package.json
@@ -9,19 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
+    "@tanstack/react-table": "^8.10.7",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
+    "next": "14.0.0",
     "react": "^18",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-image-file-resizer": "^0.4.8",
+    "react-select": "^5.7.4",
+    "swiper": "^10.3.1",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "daisyui": "^3.9.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
 }
