--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@tanstack/react-table": "^8.10.7",
+    "apexcharts": "^3.44.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "next": "14.0.0",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18",
     "react-hook-form": "^7.45.1",
