--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-select": "^5.7.4",
     "swiper": "^10.3.1",
+    "yet-another-react-lightbox": "^3.19.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
