--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.10.1",
     "react-image-file-resizer": "^0.4.8",
     "react-select": "^5.7.4",
+    "react-to-print": "^2.15.1",
     "swiper": "^10.3.1",
     "yet-another-react-lightbox": "^3.19.0",
     "zustand": "^4.3.9"
